# solana-shop

./: .gitignore  .gitmodules  .prettierrc  Anchor.toml  README.md  package.json  tsconfig.json
migrations/: airdrop.ts  init_admin.ts  payment_token.ts  send_token.ts
programs/solana-shop/: Cargo.toml
programs/solana-shop/src/: account.rs  context.rs  error.rs  event.rs  lib.rs  utils.rs
scripts/: event.ts  key.ts  metadata.ts  mint.ts  readKey.ts  signer-gen.ts
tests/: chai-setup.ts  solanaShop.test.ts  utils.ts
utils/: time.ts
